--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "recharts": "^2.14.1",
     "sass": "^1.77.8",
     "sockjs-client": "^1.6.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
